--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Sainte-Beuve, Charles Augustin, 1804-1869'
 - !lcc 'PQ'
 - !lcsh 'Baudelaire, Charles, 1821-1867'
+- GITenberg
 title: Baudelaire et Sainte-Beuve
 url: http://www.gutenberg.org/ebooks/44807
